== 版本说明

=== 1.0.0-RC

==== Feature

* 添加服务调用限制（可定义A服务不允许B服务调用，防止服务双向依赖） e.g.

 dew.security.exclude-services:
  - serviceB
  - serviceC

* 添加对Thrift的支持
* 支持集群Master选举（非严格模式）

==== Improvement

* 优化CURD脚手架
* 使用Druid数据库连接池（注意配置文件变更）
* 支持UUID形式的主键
* 优化注解自定义查询（ `@Select` ），通过测试
* 删除 `DaoImpl` 兼容性类

==== Fixed

=== 1.0.0-beta4

==== Feature

* 整合 `Spring boot admin` 与 `Turbine`，可直观的监控各个性能及访问指标

image::./images/spring-boot-admin.png[]

* 添加实验功能：使用注解自定义查询（ `@Select` ）

==== Improvement

* 添加了几个自定义验证方式
* 添加性能测试报告
* 移除 `DaoImpl` ，改用接口 `DewDao` 

WARNING: 为确保兼容， `DaoImpl` 在这一版本中未物理移除，如有条件请迁移至 `DewDao` 

==== Fixed

=== 1.0.0-beta3

==== Feature

. Cluster的MQ添加RabbitMQ SPI

==== Improvement

. 支持自定义http错误码( `Dew.e(String code, E ex, StandardCode customHttpCode)` )
. 对加了字段校验(@Valid)的对象，如果检验失败会返回错误详细
. 开放将ResultSet转成对象的方法( `ds.convertRsToObj(Map<String, Object> rs, Class<E> entityClazz)` )

==== Fixed

=== 1.0.0-Beta2

==== Feature

. 支持生成Html及PDF版本的离线文档

==== Improvement

. 添加Dubbo整合示例，提供Dubbo服务提供无法处理`声明式事务`的方案
. 完善文档并改用asciidoc格式
. 统一依赖管理
. `parent` 中添加公司maven库
. Hazelcast Client升级到3.8.2
. Dew-Common升级到1.3.7

==== Fixed

=== 1.0.0-beta1

==== Feature

. 多数据源支持，详见说明文档`多数据源支持`章节

IMPORTANT: 原`Dew.ds.xx`接口弃用，改为`Dew.ds().xx`，如需要使用其它数据源请使用`Dew.ds(&lt;DS Name&gt;).xx`

==== Improvement

. 新增`mybatisplus-example`
. 改善`Swagger`文档支持
. 新增销毁时间支持：`boolean tryLock(long waitMillSec, long leaseMillSec)`
. 锁的等待、销毁时间单位由原来的`秒`改成`毫秒`

==== Fixed

. 修正`tryLock`锁（`Redis`实现），锁被其它线程或JVM占用时等待时间的计算错误