@@ -26,6 +26,7 @@
         <module>components/gateway</module>
         <module>components/monitor</module>
         <module>examples/bone-example</module>
+        <module>examples/cache-example</module>
         <module>examples/web-example</module>
         <module>examples/jdbc-example</module>
         <module>examples/cluster-example</module>
